Adds caption to tables and references. Rating  scale is now presented in a table.

--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -204,39 +204,42 @@ The interviews were conducted in teams of two researchers. One researcher, who w
 
 \subsection{Background of interviewees}
 \label{lod-benefits-challenges:interviewees}
-At the beginning of the interviews, the five participants had to answer some questions about their background. They had to describe their daily work tasks and responsibilities at the university. Furthermore, the interviewees had to estimate their level of expertise in the field of Information \& Communication Technologies and in the field of Linked (Open) Data. The results are visualized in the following table. \\
+At the beginning of the interviews, the five participants had to answer some questions about their background. They had to describe their daily work tasks and responsibilities at the university. Furthermore, the interviewees had to estimate their level of expertise in the field of Information \& Communication Technologies and in the field of Linked (Open) Data. Table \ref{table:interviewee-background} shows the results and table \ref{table:interviews-rating scales} shows the used rating scales.\\
 
-\begin{tabular}{| l | c | c | c |}
- 	\multicolumn{2}{c|}{} & \multicolumn{2}{c|}{Level of expertise} \\
- 	\hline
-	ID & Assignment & ICT (1-5) & LOD (1-5) \\
-	\hline
-	A  & student representative & 3 & 1 \\
-	B & teaching and administration & 5 & 2 \\
-	C & teaching and administration & 5 & 1 \\
-	D & student & 4 & 3 \\
-	E & student & 4 & 3 \\
-	\hline
-\end{tabular}
+\begin{table}[h]
+	\begin{tabular}{| l | c | c | c | c |}
+ 		\multicolumn{2}{c|}{} & \multicolumn{2}{c|}{Level of expertise} \\
+ 		\hline
+		ID & Assignment & ICT (1-5) & LOD (1-5) & Date of interview \\
+		\hline
+		A  & student representative & 3 & 1 & 24.11.2015\\
+		B & teaching \& administration & 5 & 2 & 03.12.2015\\
+		C & teaching \& administration & 5 & 1 & 17.12.2015\\
+		D & student & 4 & 3 & 12.02.2016\\
+		E & student & 4 & 3 & 18.02.2016\\
+		\hline
+	\end{tabular}
+	\caption{Background information of the interviewees and the corresponding interviews.}
+	\label{table:interviewee-background}
+\end{table}
 
-\paragraph*{Scala for level of expertise in the field of ICT}
-\begin{description}
-	\item[1] ... Fundamental
-	\item[2] ... Novice
-	\item[3] ... Intermediate
-	\item[4] ... Advanced
-	\item[5] ... Expert
-\end{description}
-
-\paragraph*{Scala for level of expertise in the field of Linked (Open) Data}
-\begin{description}
-	\item[1] ... I never heard of Linked Open Data.
-	\item[2] ... I heard of Linked Open Data, but never used it.
-	\item[3] ... I used Linked Open Data in a not intense way. E.g. as part of a workshop or home project.
-	\item[4] ... I used Linked Open Data in a practical project.
-	\item[5] ... I used Linked Open Data in several practical projects and consider myself an expert in Linked Open Data.
-\end{description}
-
+\begin{table}[h]
+	\begin{tabular}{ c | l  | p{8cm} }
+		Value & ICT & LOD\\	
+		\hline
+		1 & Fundamental & I never heard of Linked Open Data.\\
+		\hline
+		2 & Novice & I heard of Linked Open Data, but never used it.\\
+		\hline
+		3 & Intermediate & I used Linked Open Data in a not intense way. E.g. as part of a workshop or home project.\\
+		\hline
+		4 & Advanced & I used Linked Open Data in a practical project.\\
+		\hline
+		5 & Expert & I used Linked Open Data in several practical projects and consider myself an expert in Linked Open Data.\\
+	\end{tabular}
+	\caption{Rating scales for the level of expertise in the field of ICT and LOD}
+	\label{table:interviews-rating scales}
+\end{table}
 
 \subsection{Use cases and needs}
 \label{lod-benefits-challenges:explored-needs-usecases}
