Adds a section before every reference to a section.

--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -112,7 +112,7 @@ As the application domain for a Linked Data is limited to the university context
 \paragraph{4. Sketching a prototypical implementation of a Linked Open Data solution.}
 In consideration of the above mentioned obstacles of a possible Linked Open Data solution, we gave an outline of a prototypical implementation. It begins by covering the whole process of data provision and ends by applications made for end users. 
 \subsection{Structure of this Paper}
-The rest of the paper is structured as follows: Section \ref{related-work} provides a summary of existing efforts and works related to the research of this paper. Section \ref{lod-benefits-challenges} discusses the methodology as well as the results of the conducted case study concerning research question 2 and 3 from the perspective of students. Section \ref{technical-architecture-challenges:lod-effort} presents a model for describing how an LOD effort can evolve at a university, \ref{technical-architecture-challenges:proposal} proposes a technical architecture for applying Linked Open Data principles to public resources of universities and \ref{technical-architecture-challenges:proposal} discusses challenges. Whereas \ref{technical-architecture-challenges:proposal} is targeted to readers concerned with information \& communication technologies and software architectures, all other sections requires no deeper technical understanding of Linked Data than provided by the introduction, 
+The rest of the paper is structured as follows: Section \ref{related-work} provides a summary of existing efforts and works related to the research of this paper. Section \ref{lod-benefits-challenges} discusses the methodology as well as the results of the conducted case study concerning research question 2 and 3 from the perspective of students. Section \ref{technical-architecture-challenges:lod-effort} presents a model for describing how an LOD effort can evolve at a university, section \ref{technical-architecture-challenges:proposal} proposes a technical architecture for applying Linked Open Data principles to public resources of universities and section \ref{technical-architecture-challenges:proposal} discusses challenges. Whereas section \ref{technical-architecture-challenges:proposal} is targeted to readers concerned with information \& communication technologies and software architectures, all other sections requires no deeper technical understanding of Linked Data than provided by the introduction, 
 Finally, conclusions are drawn in section \ref{conclusion}.
 
 
@@ -153,14 +153,14 @@ LUCERO (Linking University Content for Education and Research Online) was a proj
 
 \subsection{Austrian Open Data}
 \label{related-work:austrian-open-data}
-In Austria datasets of various governmental units from different areas of life are exposed on the open data portal \texttt{data.gv.at}. Whereas this data portal is restricted to governmental units\footnote{Member of 'Cooperation OGD Austria'}, \texttt{opendataportal.at} provides a platform for anyone who wants to share data in an open way. In both cases the category \textit{'Bildung und Forschung'} (German for education and research) is especially of interest for (Linked) Open Data initiatives at Austrian universities. Overall, the published data sets are mainly localizing points of interest (libraries, museums and universities), but apart of the Vienna University of Economics more specific information like provided courses and curricula has not been published yet about universities. In fact, the Vienna University of Economics is already active and publishes mainly course information and library collections in a machine-readable and open way on their open data portal \texttt{data.wu.ac.at} and on \texttt{opendataportal.at}. All in all the amount of data concerning education and research on the mentioned Austrian data portals is negligibly at the moment of writing.
+In Austria datasets of various governmental units from different areas of life are exposed on the open data portal \texttt{data.gv.at}. Whereas this data portal is restricted to governmental units\footnote{Member of 'Cooperation OGD Austria'}, \texttt{opendataportal.at} provides a platform for anyone who wants to share data in an open way. In both cases the category \textit{'Bildung und Forschung'} (German for education and research) is especially of interest for (Linked) Open Data initiatives at Austrian universities. Overall, the published data sets are mainly localizing points of interest (libraries, museums and universities) and apart of the Vienna University of Economics more specific information like provided courses and curricula has not been published yet about universities. In fact, the Vienna University of Economics is already active and publishes mainly course information and library collections in a machine-readable and open way on their open data portal \texttt{data.wu.ac.at} and on \texttt{opendataportal.at}. All in all the amount of data concerning education and research on the mentioned Austrian data portals is negligibly at the moment of writing.
 
 Meanwhile data is exposed in machine-readable and open formats, there has been little effort taken to provide it as Linked Open Data. However, Christian Weiss has designed a system\footnote{\url{http://cweiss.net/lod/} last accessed on 15.03.2016} in connection with his master thesis\footnote{C. Weiss, 'Transferring Open Government Data into the global Linked Open Data Cloud', 2013} to provide a subset of the Open Government Data provided by Vienna (\texttt{data.wien.gv.at}) as Linked Open Data. In the same year 2013 the project LODPilot\footnote{\url{http://lodpilot.at/}} was initiated to create an infrastructure to provide the basic datasets published on \texttt{data.gv.at} and \texttt{data.wien.gv.at} as Linked Open Data.
 
-Beside the open data portals, \texttt{Wegweiser}\footnote{\url{http://www.wegweiser.ac.at/}} is an early attempt of a set of Austrian universities to share information of public interest like course information, curricula and building plans in an open way. The information on Wegweiser is served only in a human readable format and therefore not easily processable by computers so that applications based on it can difficultly evolve. Furthermore, the service is not maintained any more and outdated. \texttt{Open Street Maps}\footnote{\url{https://www.openstreetmap.org/}} is a global service that make spatial information of Austria (a.o.), which has been collected by an open community, available in an open way. The University of Leipzig has build an infrastructure to provide this collected information as Linked Open Data with the project named \texttt{LinkedGeoData}\footnote{\url{http://linkedgeodata.org/About}}. \texttt{DBPedia}\footnote{\url{http://wiki.dbpedia.org/}} is another project of the mentioned university that extracts knowledge from Wikipedia and transforms it into Linked Open Data. For example, \texttt{DBPedia} contains a machine-processable description of the Vienna University of Technology\footnote{\url{http://dbpedia.org/page/Vienna_University_of_Technology}}. \texttt{Wikidata}\footnote{\url{https://www.wikidata.org/}} is a similar project to \texttt{DBPedia} and also provides knowledge about Austria in a machine-processable format. 
+Beside the open data portals, \texttt{Wegweiser}\footnote{\url{http://www.wegweiser.ac.at/}} is an early attempt of a set of Austrian universities to share information of public interest like course information, curricula and building plans in an open way. The information on Wegweiser is served only in a human readable format and therefore not easily processable by computers so that applications based on it can difficultly evolve. Furthermore, the service is not maintained any more and outdated. \texttt{Open Street Maps}\footnote{\url{https://www.openstreetmap.org/}} is a global service that make spatial information of Austria (a.o.), which has been collected by an open community, available in an open way. The University of Leipzig has build an infrastructure to provide this collected information as Linked Open Data with the project named \texttt{LinkedGeoData}\footnote{\url{http://linkedgeodata.org/About}}. \texttt{DBPedia}\footnote{\url{http://wiki.dbpedia.org/}} is another project of the mentioned university that extracts knowledge from Wikipedia and transforms it into Linked Open Data. For example, \texttt{DBPedia} contains a machine-processable description of the Vienna University of Technology\footnote{\url{http://dbpedia.org/page/Vienna_University_of_Technology}}. \texttt{Wikidata}\footnote{\url{https://www.wikidata.org/}} is a project similar to \texttt{DBPedia} and also provides knowledge about Austria in a machine-processable format. 
 
 \subsection{Linked Education}
-\label{related-work:austrian-open-data}
+\label{related-work:linked-education}
 Linked~Education represents the idea of using Linked~Data principles for educational purposes. 
 
 ...
@@ -182,9 +182,9 @@ The first section describes the applied methodology (see \ref{lod-benefits-chall
 
 \subsection{Methodology}
 \label{lod-benefits-challenges:methodology}
-Since the idea of Linked Open Data as well as the idea of applying it to the domain of universities is around for a while now (e.g. Linked Universities, 2011), the first step was to discover Linked Open Data initiatives of universities that have already been started and case studies that have already been conducted. A brief description of the results can be seen in \ref{related-work}. The discovered case studies and initiatives were analysed and two common use cases, which may be the most interesting ones from the point of a student, were extracted; a map of places of interest (see \ref{lod-benefits-challenges:explored-needs-usecases:map}) and a resource list management application (see \ref{lod-benefits-challenges:explored-needs-usecases:rlm}). 
+Since the idea of Linked Open Data as well as the idea of applying it to the domain of universities is around for a while now (e.g. Linked Universities, 2011), the first step was to discover Linked Open Data initiatives of universities that have already been started and case studies that have already been conducted. A brief description of the results can be seen in section \ref{related-work}. The discovered case studies and initiatives were analysed and two common use cases, which may be the most interesting ones from the point of a student, were extracted; a map of places of interest (see \ref{lod-benefits-challenges:explored-needs-usecases:map}) and a resource list management application (see \ref{lod-benefits-challenges:explored-needs-usecases:rlm}). 
 
-Afterwards the case study was designed and semi-structured interviews were planned to answer the research questions of the case study. Both extracted use cases were part of the interviews; on the one hand to give the interviewees an idea what Linked Open Data can be used for and on the other hand to evaluate the acceptance and doubts regarding these use cases. Potential interviewees were collected by suggestions of prior interviewees and persons that are quite familiar with the domain of the university. In summary, five interviews were conducted and at the time of the conduction all interviewees were \textit{students} or persons affiliated with \textit{student affairs}. A more detailed description of the interviewees can be found in \ref{lod-benefits-challenges:interviewees}. The design of the interview is further discussed in the following section.
+Afterwards the case study was designed and semi-structured interviews were planned to answer the research questions of the case study. Both extracted use cases were part of the interviews; on the one hand to give the interviewees an idea what Linked Open Data can be used for and on the other hand to evaluate the acceptance and doubts regarding these use cases. Potential interviewees were collected by suggestions of prior interviewees and persons that are quite familiar with the domain of the university. In summary, five interviews were conducted and at the time of the conduction all interviewees were \textit{students} or persons affiliated with \textit{student affairs}. A more detailed description of the interviewees can be found in section \ref{lod-benefits-challenges:interviewees}. The design of the interview is further discussed in the following section.
 
 \subsubsection{Interview design}
 \label{lod-benefits-challenges:interview-design}
@@ -204,7 +204,7 @@ The interviews were conducted in teams of two researchers. One researcher, who w
 
 \subsection{Background of interviewees}
 \label{lod-benefits-challenges:interviewees}
-At the beginning of the interviews, the five participants had to answer some questions about their background. They had to describe their daily work tasks and responsibilities at the university. Furthermore, the interviewees had to estimate their level of expertise in the field of Information \& Communication Technologies and in the field of Linked (Open) Data. Table \ref{table:interviewee-background} shows the results and table \ref{table:interviews-rating scales} shows the used rating scales.\\
+At the beginning of the interviews, the five participants had to answer some questions about their background. They had to describe their daily work tasks and responsibilities at the university. Furthermore, the interviewees had to estimate their level of expertise in the field of Information \& Communication Technologies and in the field of Linked Open Data. Table \ref{table:interviewee-background} shows the results and table \ref{table:interviews-rating scales} shows the used rating scales.\\
 
 \begin{table}[h]
 	\begin{tabular}{| l | c | c | c | c |}
@@ -237,7 +237,7 @@ At the beginning of the interviews, the five participants had to answer some que
 		\hline
 		5 & Expert & I used Linked Open Data in several practical projects and consider myself an expert in Linked Open Data.\\
 	\end{tabular}
-	\caption{Rating scales for the level of expertise in the field of ICT and LOD}
+	\caption{Rating scales for the level of expertise in the field of ICT and LOD.}
 	\label{table:interviews-rating scales}
 \end{table}
 
@@ -266,7 +266,7 @@ The Vienna University of Technology has already published the location of the le
 All interviewees responded positively to this proposed application use case and would use such an application. Interviewee \textit{\textbf{E}} would like to have an overview of all scheduled events(exams, lectures, exercises) that take place in a certain room at a particular date. This idea corresponds to the demand of all other interviewees to find free rooms for particular tasks. \textit{\textbf{A}} and \textit{\textbf{D}} would like to have a service, where all free rooms that can potentially be used for meet-ups and learning like free lecture rooms are indicated on such a map. \textit{\textbf{B}} and \textit{\textbf{C}} would like to have a service to simplify the finding of free seminar rooms and rooms in general that can be used by tutors to mentor their students. Regarding the provision of information about the accessibility in such a map, \textit{\textbf{B}} mentioned that real-time data about disfunctional elevators may be quite useful. \textit{\textbf{C}} would also like to have an overview of the location of institutes. This idea corresponds to the science area application of the Oxford University\footnote{\url{https://data.ox.ac.uk/explore/science-area/}}. \textit{\textbf{E}} wanted to make the note that such a map application shall also work offline.
 
 \paragraph{Challenges:}
-The information required for such an application is separated over different data sources including diverging data owners, but this phenomena is not unique for this use case and challenges as well as an approach to overcome this is further discussed in \ref{technical-architecture-challenges}.
+The information required for such an application is separated over different data sources including diverging data owners, but this phenomena is not unique for this use case and challenges as well as an approach to overcome this is further discussed in section \ref{technical-architecture-challenges}.
 
 \subsubsection{Resource management list}
 \label{lod-benefits-challenges:explored-needs-usecases:rlm}
@@ -286,7 +286,7 @@ When a student wants to get an overview of the suggested resources (books, journ
 \textit{\textbf{B}} and \textit{\textbf{C}} were quite sceptical about this use case and their concerns are further discussed in the challenge section. \textit{\textbf{A}}, \textit{\textbf{D}} and \textit{\textbf{E}} would like to have such an application.\textit{\textbf{E}} said, ''\textit{Yes. It is a pain to stay up-to-date on organizational lecture information, which is often distributed over TISS\footnote{central information system of the Vienna University of Technology}, TUWEL\footnote{e-learning platform, a customization of moodle}, the institutute homepage, etc.} ...''. This comment goes beyond this use case and concerns organizational information in general. Such a resource list management tool could be part of a broader set of services that simplify the organizational burden of students. \textit{\textbf{D}} mentioned that (s)he was multiple times on the edge to send explored useful resources that helped him/her a lot to attain the learning goals of the course per email to the lecturer. \textit{\textbf{D}} also suggested a ranking like on stackoverflow\footnote{\url{http://stackoverflow.com/}}, where contributions can be liked or disliked and in consequence helpful contributions are usually at the top. \textit{\textbf{E}} suggested to make it possible to link to useful contributions in the Informatikforum\footnote{internet forum for students of informatics} and experience reports on VOWI\footnote{a wiki, where students share experience and knowledge about courses}.
 
 \paragraph{Challenges:}
-\textit{\textbf{B}} and \textit{\textbf{C}} mentioned that the additional administrative burden for course teams like keeping the list up-to-date may diminish the willingness of using such an application.\textit{\textbf{B}} pointed out, that the use of the e-learning platform TUWEL is also not accepted throughout all course teams. While the contribution of the course team would be quite valuable, the resource list management tool could allow the students to create resource lists completely on their own. However, this approach may cause situations where solutions to exercises are contributed as well as spam, if the course team is not into it. Same as with the map application use case, the information required for such an application is separated over different data sources including diverging data owners. Challenges as well as an approach to overcome this is further discussed in \ref{technical-architecture-challenges}.
+\textit{\textbf{B}} and \textit{\textbf{C}} mentioned that the additional administrative burden for course teams like keeping the list up-to-date may diminish the willingness of using such an application.\textit{\textbf{B}} pointed out, that the use of the e-learning platform TUWEL is also not accepted throughout all course teams. While the contribution of the course team would be quite valuable, the resource list management tool could allow the students to create resource lists completely on their own. However, this approach may cause situations where solutions to exercises are contributed as well as spam, if the course team is not into it. Same as with the map application use case, the information required for such an application is separated over different data sources including diverging data owners. Challenges as well as an approach to overcome this is further discussed in section \ref{technical-architecture-challenges}.
 
 \subsubsection{Explored use cases}
 \label{lod-benefits-challenges:explored-needs-usecases:explored}
@@ -331,7 +331,7 @@ Today's universities usually have to manage a significant amount of information 
 
 It is likely for such an environment to result in independent services, which encapsulate their collected information into disconnected data sources with different formats and/or data owners. As a result of this, the information that has been collected by all these multiple services can not easily be interlinked, which blocks the full potential. A simple example for such two isolated services at the Vienna University of Technology are the e-learning platform called TUWEL\footnote{\url{https://tuwel.tuwien.ac.at/}}, which is a customization of moodle\footnote{\url{https://moodle.org/}}, and the central information system called TISS. Both of these services provide course information and material, but they are intended for different purposes. TISS focuses mainly on administrative functionality like course or exam registrations, whereas TUWEL focuses on a broader interaction between teacher and student. Providing for example an additional functionality, which synchronizes important dates from deadlines of exercises to the time of lectures and exams with your own calendar might be quite useful, but the development is costly, due to the fact that the information is separated over this different isolated data sources and at that point not freely accessible. 
 
-\ref{technical-architecture-challenges:proposal} proposes a technical architecture using a Linked Data approach to overcome this environment of data silos and to support the evolvement of a university-wide data space, which can be queried. In fact this university-wide data space can be interlinked with the LOD of other entities like DBPedia or LinkedGeoData to enrich it. \ref{technical-architecture-challenges:lod-effort} describes the stakeholder driven evolvement of a Linked Open Data effort at a university. The last section discusses the challenges (see \ref{technical-architecture-challenges:challenges}).
+Section \ref{technical-architecture-challenges:proposal} proposes a technical architecture using a Linked Data approach to overcome this environment of data silos and to support the evolvement of a university-wide data space, which can be queried. In fact this university-wide data space can be interlinked with the LOD of other entities like DBPedia or LinkedGeoData to enrich it. Section \ref{technical-architecture-challenges:lod-effort} describes the stakeholder driven evolvement of a Linked Open Data effort at a university. The last section discusses the challenges (see \ref{technical-architecture-challenges:challenges}).
 
 \subsection{Linked Open Data effort at universities}
 \label{technical-architecture-challenges:lod-effort}
@@ -363,7 +363,7 @@ is controlled by the demand on publishing the known datasets of this resource as
 The owner of a dataset is the organization or person that is responsible for the dataset and manages it. The exploration of the data owner is important for transforming the dataset into Linked Open Data, because the owner can authorize access to it and has specific expertise about it. 
 
 \item \textit{Data transformer}~\\
-Dependent on the format of the dataset, the data transformer can either be a program or a semi-automatic approach, where a human prepares the dataset for a program. A complete automatic approach is possible, if the datasets are available in a machine-processable format and if the content can be interpreted (e.g. CSV, XML). Whereas a semi-automatic approach is required, if the content of the dataset can not be interpreted (e.g. images, PDF or hidden in the text) or if the dataset is not available in a machine-processable format (e.g. human expertise). Then a human has to interpret and store the result in a appropriate format so that a automatic approach is applicable. The data sources and the corresponding transformation techniques are further discussed in \ref{technical-architecture-challenges:proposal}.
+Dependent on the format of the dataset, the data transformer can either be a program or a semi-automatic approach, where a human prepares the dataset for a program. A complete automatic approach is possible, if the datasets are available in a machine-processable format and if the content can be interpreted (e.g. CSV, XML). Whereas a semi-automatic approach is required, if the content of the dataset can not be interpreted (e.g. images, PDF or hidden in the text) or if the dataset is not available in a machine-processable format (e.g. human expertise). Then a human has to interpret and store the result in a appropriate format so that a automatic approach is applicable. The data sources and the corresponding transformation techniques are further discussed in Section \ref{technical-architecture-challenges:proposal}.
 
 \end{itemize}
 
@@ -371,7 +371,7 @@ Dependent on the format of the dataset, the data transformer can either be a pro
 \paragraph{The development of LOD applications}
 \label{technical-architecture-challenges:lod-effort:dev-app}
 can emerge at a university, if potential initiators see a requirement for their idea of an application (meets user requirements that are not satisfied by the current information environment) and if the datasets of the resources required for such an application have already been exposed or they are going to be exposed in near future. The evolvement of an environment, where new LOD applications are initiated, assumes incentives for the \textit{development teams}. At a university with researchers and students in the field of informatics as potential \textit{developers}, joy and acknowledgement may be an incentive, beside the monetization
-of the work like through university aid, donors or advertisements. This particular issue was part of the interviews with the students and the results can be seen in \ref{lod-benefits-challenges:playground}.
+of the work like through university aid, donors or advertisements. This particular issue was part of the interviews with the students and the results can be seen in section \ref{lod-benefits-challenges:playground}.
 
 \begin{itemize}
 \item \textit{Application developer}~\\
@@ -384,7 +384,7 @@ An expert, who has expertise about Linked Data and the supporting frameworks of 
 
 \paragraph{A LOD application use case} 
 \label{technical-architecture-challenges:lod-effort:use-case}
-is the interaction of users with a developed application that makes use of LOD provided by the university. The application use case is the attempt to satisfy user requirements and becomes part of the information environment at the university. The exploration of interesting use cases from the student perspective was an essential part of the conducted interviews and the results can be seen in \ref{lod-benefits-challenges:explored-needs-usecases}.
+is the interaction of users with a developed application that makes use of LOD provided by the university. The application use case is the attempt to satisfy user requirements and becomes part of the information environment at the university. The exploration of interesting use cases from the student perspective was an essential part of the conducted interviews and the results can be seen in section \ref{lod-benefits-challenges:explored-needs-usecases}.
 
 \subsection{Proposal of a technical architecture}
 \label{technical-architecture-challenges:proposal}
