Corrects wrong reference.

--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -112,7 +112,7 @@ As the application domain for a Linked Data is limited to the university context
 \paragraph{4. Sketching a prototypical implementation of a Linked Open Data solution.}
 In consideration of the above mentioned obstacles of a possible Linked Open Data solution, we gave an outline of a prototypical implementation. It begins by covering the whole process of data provision and ends by applications made for end users. 
 \subsection{Structure of this Paper}
-The rest of the paper is structured as follows: Section \ref{related-work} provides a summary of existing efforts and works related to the research of this paper. Section \ref{lod-benefits-challenges} discusses the methodology as well as the results of the conducted case study concerning research question 2 and 3 from the perspective of students. Section \ref{technical-architecture-challenges:lod-effort} presents a model for describing how an LOD effort can evolve at a university, section \ref{technical-architecture-challenges:proposal} proposes a technical architecture for applying Linked Open Data principles to public resources of universities and section \ref{technical-architecture-challenges:proposal} discusses challenges. Whereas section \ref{technical-architecture-challenges:proposal} is targeted to readers concerned with information \& communication technologies and software architectures, all other sections requires no deeper technical understanding of Linked Data than provided by the introduction, 
+The rest of the paper is structured as follows: Section \ref{related-work} provides a summary of existing efforts and works related to the research of this paper. Section \ref{lod-benefits-challenges} discusses the methodology as well as the results of the conducted case study concerning research question 2 and 3 from the perspective of students. Section \ref{technical-architecture-challenges:lod-effort} presents a model for describing how an LOD effort can evolve at a university, section \ref{technical-architecture-challenges:proposal} proposes a technical architecture for applying Linked Open Data principles to public resources of universities and section \ref{technical-architecture-challenges:challenges} discusses challenges. Whereas section \ref{technical-architecture-challenges:proposal} is targeted to readers concerned with information \& communication technologies and software architectures, all other sections requires no deeper technical understanding of Linked Data than provided by the introduction, 
 Finally, conclusions are drawn in section \ref{conclusion}.
 
 
